# dtu_mlops_age_prediction

./: .gitignore  README.md  pyproject.toml  requirements.txt
dtu_mlops_age_prediction/: LICENSE  Makefile  README.md  data.dvc  predict_model.dockerfile  pyproject.toml  requirements.txt
dtu_mlops_age_prediction/.github/workflows/: codecheck.yml  tests.yml  tests_new.yml
dtu_mlops_age_prediction/config/: config_train.yaml  wandb_sweep.yaml
dtu_mlops_age_prediction/config/experiment/: exp2.yaml
dtu_mlops_age_prediction/data/: processed.dvc  raw.dvc
dtu_mlops_age_prediction/dockerfiles/: download_data.dockerfile  make_dataset.dockerfile  train_model.dockerfile
dtu_mlops_age_prediction/docs/: mkdocs.yaml
dtu_mlops_age_prediction/docs/source/: index.md
dtu_mlops_age_prediction/dtu_mlops_age_prediction/: __init__.py  config_train.yaml  predict_model.py  train_model.py  train_model_sweep.py
dtu_mlops_age_prediction/dtu_mlops_age_prediction/data/: download_data.py  make_dataset.py
dtu_mlops_age_prediction/dtu_mlops_age_prediction/models/: model.py
dtu_mlops_age_prediction/reports/: README.md
dtu_mlops_age_prediction/src/: __init__.py  predict_model.py  train_model.py  train_model_exp.py  train_model_sweep.py  train_model_sweep_exp.py
dtu_mlops_age_prediction/src/api/: main.py
dtu_mlops_age_prediction/src/data/: download_data.py  make_dataset.py
dtu_mlops_age_prediction/src/models/: model.py
dtu_mlops_age_prediction/tests/: test_data.py  test_model.py
dtu_mlops_age_prediction/wandb/run-20240117_120357-66rm8gll/: run-66rm8gll.wandb
(+320 files in other folders)
