[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "dtu_mlops_age_prediction"
version = "0.0.1"
description = "Age prediction model for facial images"
authors = [
  { name = "Group 39", email = "your@email.com" },
]
license = { file = "LICENSE" }
readme = "README.md"
requires-python = ">=3.11"

[tool.setuptools]
packages = ["src"]

[tool.ruff]
line-length = 120
